--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="hero-text">
             <h1>Roberto Castelli</h1>
             <p class="secondary-text">a JS enthusiast</p> 
-            <a href="#about" role="button" class="btn btn-outline-dark mt-5">Check me out</a>
+            <h5 class="text-danger font-weight-bold">still under construction</h5>
+            <a href="#about" role="button" class="btn btn-outline-light mt-5"><i class="fas fa-arrow-down"></i></a>
         </div>
     </div>
    
@@ -58,18 +59,17 @@
                 <div class="col-3">
                     <div class="card text-center my-5">
                         <div class="card-up">
-                            <img class="card-img-top" src="img/abstract8.png" alt="bg image">
+                            <img class="card-img-top shadow" src="img/abstract8.png" alt="bg image">
                         </div>
                         <div class="avatar">
-                            <img src="img/avatar.svg" class="rounded-circle" alt="avatar" width="100px">
+                            <img src="img/avatar.svg" class="img-thumbnail rounded-circle shadow" alt="avatar" width="100px">
                         </div>    
                         <div class="card-body mt-5">                
-                            <p>Project manager <br> and a JS enthusiast</p>
+                            <p>Project Manager <br> and a JS enthusiast</p>
                         </div>
-                        <div class="card-footer ">                
-                            <h6><small>“First, solve the problem. Then, write the code.” – John Johnson</small></h6>
+                        <div class="card-footer">                
+                            <h6><small><i class="fa fa-quote-left pr-2"></i>First, solve the problem. Then, write the code. – John Johnson</small></h6>
                         </div>
-
                     </div>
                 </div>
         
@@ -84,16 +84,80 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>    
         </div>
     </div>
 
-    <div class="projects">
+    <div class="projects text-center">
         <div id="projects" class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card-body my-5">
+                        <h5 class="card-title text-success font-weight-bold">JS PROJECTS</h5>
+                        <p class="card-text" style="color: lightgrey">
+                            Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore
+                            magna aliqua.
+                            Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi
+                            consequatur. Duis
+                            aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                            obcaecat
+                            cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </p>
+                    </div>              
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-2">
+                    <div class="card">
+                        <div class="card-up">
+                            <img class="img-thumbnail" src="img/bggame.png" alt="game of life">
+                        </div>
+                        <div class="card-body">
+                            <small>game of life</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card">
+                        <div class="card-up">
+                            <img class="card-img-top img-thumbnail" src="img/bgdrum.jpg" alt="drum machine">
+                        </div>
+                        <div class="card-body">
+                            <small>drum machine</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card">
+                        <div class="card-up">
+                            <img class="img-thumbnail" src="img/bgtodo.jpg" alt="to do list">
+                        </div>
+                        <div class="card-body">
+                            <small>to do list</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-center">
+                        <div class="card-up">
+                            <img class="img-thumbnail" src="img/bgpaint.png" alt="bg image">
+                        </div>
+                        <div class="card-body">
+                            <small>simple paint</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
+
+    <div class="blog">
+        <div id="blog" class="container">
             <div class="row">
                 <div class="col-8">
                     <div class="card-body my-5">
-                        <h5 class="card-title text-success font-weight-bold">JS PROJECTS</h5>
+                        <h5 class="card-title text-warning font-weight-bold">BLOG</h5>
                         <p class="card-text" style="color: lightgrey">
                             Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore
                             magna aliqua.
@@ -106,69 +170,51 @@
                     </div>
                 </div>
 
-                <div class="col-4">
-                    <div id="projects" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#projects" data-slide-to="0" class="active"></li>
-                            <li data-target="#projects" data-slide-to="1"></li>
-                            <li data-target="#projects" data-slide-to="2"></li>
+                    <div id="carouselContent" class="carousel slide col-4" data-ride="carousel">
+                        <ol class="carousel-indicators mt-5">
+                            <li data-target="#carouselContent" data-slide-to="0"></li>
+                            <li data-target="#carouselContent" data-slide-to="1"></li>
+                            <li data-target="#carouselContent" data-slide-to="2"></li>
+                            <li data-target="#carouselContent" data-slide-to="3"></li>
+                            <li data-target="#carouselContent" data-slide-to="4"></li>
+
                         </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active my-5">
-                            <img class="d-block mx-auto rounded" src="https://via.placeholder.com/250x250" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TEST 1</h5>
-                                <p>Lorem Ipsum</p>
+                        <div class="carousel-inner text-center p-5  mt-5" role="listbox" style="color: lightgrey">
+                            <div class="carousel-item active">
+                                <p>“Simplicity is the soul of efficiency.” – Austin Freeman</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p>“Fix the cause, not the symptom.” – Steve Maguire</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p>“Java is to JavaScript what car is to Carpet.” – Chris Heilmann</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p>“Before software can be reusable it first has to be usable.” – Ralph Johnson</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p>“Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p>“Perfection is achieved not when there is nothing more to add, but rather when there
+                                    is nothing more to take away.” – Antoine de Saint-Exupery</p>
                             </div>
                         </div>
-                        <div class="carousel-item my-5">
-                            <img class="d-block mx-auto rounded" src="https://via.placeholder.com/250x250" alt="Second slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TEST 2</h5>
-                                <p>Lorem Ipsum</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item my-5">
-                            <img class="d-block mx-auto rounded" src="https://via.placeholder.com/250x250" alt="third slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TEST 3</h5>
-                                <p>Lorem Ipsum</p>
-                            </div>
-                        </div>
+                        <a class="carousel-control-prev mb-5" href="#carouselContent" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next mb-5" href="#carouselContent" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#projects" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#projects" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
+                 
             </div>
         </div>
-    </div>
-
-    <div class="blog">
-        <div id="blog" class="container">
-            <div class="row">
-                <div class="col-4 mt-5">
-                    <img class=" image hover-zoomin d-block rounded" src="https://via.placeholder.com/250x250" alt="blog">
-                </div>
-
-                <div class="col-8 mx-auto">
-                    <h5 class="text-warning font-weight-bold mt-5">BLOG</h5>
-                    <p style="color: lightgrey">
-                        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore
-                        magna aliqua.
-                        Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi
-                        consequatur. Duis
-                        aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        obcaecat
-                        cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    </p>
-                </div>
+        <div class="row justify-content-center mt-5">
+            <div class="col-1 mt-5">
+                <a href="#home" role="button" class="btn btn-outline-light"><i class="fas fa-arrow-up"></i></a>
             </div>
         </div>
     </div>
@@ -180,7 +226,6 @@
         <i class="fab fa-blogger fa-2x px-4"></i>
         <i class="fas fa-envelope-square fa-2x px-4"></i>
    
-
         <footer class="py-5">
                 <p>copyright &copy; 2019 www.robertocastelli.dev"</p>
         </footer>
