--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="col-2">
                     <div class="card text-center">
                         <div class="card-up">
-                            <img class="img-thumbnail" src="img/bgpaint.png" alt="bg image">
+                            <img class="img-thumbnail" src="img/bgpaint.png" alt="simple paint">
                         </div>
                         <div class="card-body">
                             <small>simple paint</small>
@@ -204,17 +204,17 @@
         </div>
     </div>
     
-    <div id="links" class="links text-center py-auto text-mute pt-5">
-        <i class="fas fa-home fa-2x px-4"></i>
-        <i class="fab fa-linkedin fa-2x px-4"></i>
-        <i class="fab fa-github-square fa-2x px-4"></i>
-        <i class="fab fa-blogger fa-2x px-4"></i>
-        <i class="fas fa-envelope-square fa-2x px-4"></i>
-
+    <div id="links" class="links text-center py-auto pt-5">
+        <a class="text-dark px-4" href="#home"><i class="fas fa-home fa-2x"></i></a>
+        <a class="text-dark px-4" href="https://www.linkedin.com/in/roberto-castelli-teal"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a class="text-dark px-4" href="https://github.com/RobertoCastelli/"><i class="fab fa-github-square fa-2x"></i></a>
+        <a class="text-dark px-4" href="https://www.robertocastelli.dev"><i class="fab fa-blogger fa-2x"></i></a>
         <footer class="py-5">
-                <p>copyright &copy; 2019 www.robertocastelli.dev"</p>
+                <p>copyright &copy; 2019 www.robertocastelli.dev</p>
         </footer>
     </div>
+
+
 
     <script src="js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
